--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "emotion": "^10.0.7",
     "gatsby": "^2.0.104",
+    "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-source-filesystem": "^2.0.18",
     "gatsby-source-youtube": "^1.0.1",
@@ -24,13 +25,17 @@
     "node-sass": "^4.11.0",
     "react": "^16.5.1",
     "react-custom-share": "^0.4.8",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.5.1",
+    "react-facebook": "^6.0.15",
     "react-font-awesome": "^1.0.3",
     "react-fontawesome": "^1.6.1",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.3.0",
+    "react-lazy-load": "^3.0.13",
     "react-share": "^2.4.0",
     "react-youtube": "^7.9.0",
+    "styled-components": "^4.1.3",
     "throttle-debounce": "^2.1.0",
     "youtube-playlist-info": "^1.1.2"
   },
