testing email form

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "gatsby-source-filesystem": "^2.0.18",
     "gatsby-source-youtube": "^1.0.1",
     "gatsby-transformer-remark": "^2.2.2",
+    "imports-loader": "^0.8.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
+    "mina": "^1.0.9",
     "node-sass": "^4.11.0",
     "react": "^16.5.1",
     "react-custom-share": "^0.4.8",
@@ -34,6 +36,8 @@
     "react-icons": "^3.3.0",
     "react-lazy-load": "^3.0.13",
     "react-share": "^2.4.0",
+    "react-snap-svg": "^0.1.0",
+    "react-webpack": "^0.4.1",
     "react-youtube": "^7.9.0",
     "styled-components": "^4.1.3",
     "throttle-debounce": "^2.1.0",
