--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-helmet": "^5.2.0",
     "react-icons": "^3.3.0",
     "react-lazy-load": "^3.0.13",
+    "react-load-script": "0.0.6",
     "react-share": "^2.4.0",
     "react-snap-svg": "^0.1.0",
     "react-webpack": "^0.4.1",
